--- a/aktivfinans.se/src/sass/_styles.scss
+++ b/aktivfinans.se/src/sass/_styles.scss
@@ -57,3 +57,8 @@
     	display: none;
     }
 }
+
+
+main {
+    margin-top: 20px;
+}
